<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="35sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:text="@string/register_now"
            android:layout_gravity="center"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/to_start_playing"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="82dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/info_bg"
            android:hint="@string/name"
            android:padding="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/info_bg"
            android:hint="@string/email"
            android:padding="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/info_bg"
            android:hint="@string/zeal_id"
            android:padding="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/info_bg"
            android:hint="@string/password"
            android:padding="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            />

    </LinearLayout>

</ScrollView>