<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".route">

    <com.skyfishjy.library.RippleBackground
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ripple_bg"
        app:rb_color="#0099CC"
        app:rb_radius="32dp"
        app:rb_rippleAmount="4"
        app:rb_duration="3000"
        app:rb_scale="6">
    </com.skyfishjy.library.RippleBackground>

    <TextView
        android:id="@+id/radar_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line_up_radar"
        android:fontFamily="@font/montserrat_bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="60dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/you_can_fin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_can_find_three_more_players_which_are"
        android:textSize="16sp"
        android:letterSpacing="0.01"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_medium"
        android:textAlignment="center"
        android:layout_below="@+id/radar_heading"
        android:layout_marginTop="48dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/closest_to_you"
        android:textSize="16sp"
        android:letterSpacing="0.01"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_medium"
        android:textAlignment="center"
        android:layout_below="@id/you_can_fin"/>




</RelativeLayout>