<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity">

    <include
        android:id="@+id/label"
        layout="@layout/lineup_symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/label"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/read_the_rules"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="Hey "
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/we_need_your_help"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/we_re_on_the_lookout_for_other_n_players_and_so_far_you_re_n_our_only_hope_string"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/show_the_qr_code"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/we_need_your_help_"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:text="@string/keep_you_location_turned_on"
            android:fontFamily="@font/montserrat_medium"
            android:textAlignment="center"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Map refreshes automatically every 5 seconds, with manual refresh via button click."
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            />
    </LinearLayout>


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ellipse">


        <TextView
            android:id="@+id/rules_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/rules_btn"
            android:layout_width="46dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_bg"
            android:src="@drawable/next_arrow"
            android:textColor="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </androidx.appcompat.widget.Toolbar>


</RelativeLayout>