<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpRel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".SignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/lin_lay"
                layout="@layout/lineup_symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/c_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/lin_lay"
                app:layout_constraintStart_toStartOf="@id/lin_lay"
                app:layout_constraintTop_toBottomOf="@id/lin_lay">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/const_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="90dp"
                    android:paddingBottom="120dp">

                    <TextView
                        android:id="@+id/register_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/register_now"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="35sp"
                        app:layout_constraintBottom_toTopOf="@id/start_playing_text" />

                    <TextView
                        android:id="@+id/start_playing_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/to_start_playing"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="35sp"
                        app:layout_constraintTop_toBottomOf="@id/register_text" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginRight="32dp"
                        android:background="@drawable/info_bg"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/name"
                        android:scrollHorizontally="true"
                        android:inputType="textFilter"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/start_playing_text" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginRight="32dp"
                        android:background="@drawable/info_bg"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/email"
                        android:scrollHorizontally="true"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/name" />

                    <EditText
                        android:id="@+id/zeal"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="28dp"
                        android:layout_marginRight="32dp"
                        android:background="@drawable/info_bg"
                        android:fontFamily="@font/montserrat_medium"
                        android:hint="@string/zeal_id"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/email" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        app:boxBackgroundMode="none"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:layout_constraintTop_toBottomOf="@id/zeal"
                        app:passwordToggleEnabled="true"
                        tools:ignore="MissingConstraints">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="62dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="32dp"
                            android:layout_marginTop="28dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/info_bg"
                            android:fontFamily="@font/montserrat_medium"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:padding="20dp"
                            android:singleLine="true"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/ellipse"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/reg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/register"
            android:onClick="Registration"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/regtbtn"
            android:layout_width="46dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="32dp"
            android:onClick="Registration"
            android:background="@drawable/button_bg"
            android:src="@drawable/next_arrow"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="?attr/colorOnPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>