<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/lin_lay"
            layout="@layout/lineup_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@id/lin_lay"
            app:layout_constraintStart_toStartOf="@+id/lin_lay"
            app:layout_constraintEnd_toEndOf="@id/lin_lay">

            <TextView
                android:id="@+id/log_in_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/log_in_to"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/account_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/your_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                app:layout_constraintTop_toBottomOf="@id/log_in_text"
                app:layout_constraintStart_toStartOf="@id/log_in_text"
                app:layout_constraintEnd_toEndOf="@id/log_in_text"/>

            <EditText
                android:id="@+id/zeal"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="82dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/info_bg"
                android:fontFamily="@font/montserrat_medium"
                android:hint="@string/zeal_id"
                android:padding="20dp"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@id/account_text"
                app:layout_constraintStart_toStartOf="@id/account_text"
                app:layout_constraintEnd_toEndOf="@id/account_text"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="@id/zeal"
                app:layout_constraintEnd_toEndOf="@id/zeal"
                app:layout_constraintTop_toBottomOf="@id/zeal"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginRight="32dp"
                    android:background="@drawable/info_bg"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="20dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ellipse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">


            <TextView
                android:id="@+id/reg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/login"
                android:onClick="LogIn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/login_btn"
                android:layout_width="46dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:onClick="LogIn"
                android:layout_marginTop="85dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_bg"
                android:src="@drawable/next_arrow"
                android:textColor="@color/white"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </androidx.appcompat.widget.Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorOnPrimary"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>